[project]
name = "pronotepy"
version = "3.0.0"
description = "An API wrapper for the PRONOTE school management software"
authors = [
  { name="bain", email="bain@bain.cz" },
]
readme = "README.md"
requires-python = ">=3.10" # change mypy version!
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license-files = ["LICEN[CS]E*"]
dependencies = [
    "aiohttp~=3.12.15",
    "pycryptodome~=3.23.0",
]

[project.urls]
Repository = "https://github.com/bain3/pronotepy"

[build-system]
requires = ["uv_build ~= 0.8.8"]
build-backend = "uv_build"

[tool.basedpyright]
typeCheckingMode = "standard"

[dependency-groups]
dev = [
    "furo>=2025.7.19",
    "mypy>=1.17.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.12",
    "sphinx>=8.1.3",
]

[tool.pytest.ini_options]
asyncio_mode="auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"

[tool.mypy]
python_version = "3.10"  # check against min. supported
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = [
    "F405", "F403"  # wildcard imports are OK
]
